# JDXI-Editor

./: .gitignore  CHANGELOG.md  ICON_REGISTRY_REFACTORING_OPPORTUNITIES.md  JD-Xi-Editor.spec  JD-Xi_Editor_0.6.0_MacOS_Universal.dmg  JDXi_Manager.desktop  JDXidata.pm  JSON_SAVE_ARCHITECTURE.md  LTNicons.pm  LTNstyle.pm  README.md  README.rst  SINCO_VMX8_Test_Results.md  TEST_PRIORITIES.md  THEME_MANAGER_REFACTORING_OPPORTUNITIES.md  TK_INSTALL_SUMMARY.md  adsr_widget.py  auto_mido_test.py  bad_docstrings.py  build.py  build_linux.py  build_nuitka.py  build_nuitka.sh  build_nuitka_mac.sh  clean_mido_test.py  controller_diagnostics.py  create_jdxi_app.sh  effects.csv  fresh_midi_test.py  improved_midi_monitor.py  inno.py  install_tk_auto.sh  install_tk_macos.sh  install_tk_macos_alternative.sh  install_tk_manual.txt  install_tk_quick.sh  jdxi_editor.icns  jdxi_editor.iss  jdxi_manager.pl  jdxi_tone_data_18000000.json  (+71 more)
.run/: jdxi_editor_main.run.xml
_decologr/: logger.py  viewer.py
_src/: main.py  style.py
decologr/: __init__.py  logger.py
doc/: .gitignore  DOCUMENTATION_GAP_ANALYSIS_SINCE_0.8.md  JD-Xi_MIDI_Imple_e01_W.rtf  JD-Xi_MIDI_Implementation.html  JDXiMidiGroup_REFACTORING_OPPORTUNITIES.md  PATTERN_EDITOR_MIDI_SAVE_GAP_ANALYSIS.md  additional-editors.rst  analog_synth.rst  arbitrary-cc-pc-sender-plan.md  arpeggiator-gap-analysis.md  arpeggiator-migration-plan.md  arpeggiator-sysex-gap-analysis.md  arpeggiator.rst  cheatsheet.txt  conf.py  config.py  control-change-map.md  digital_synth.rst  drum_kit.rst  editor-windows.rst  editor.rst  effects-gap-analysis.md  effects-midi-requests-perl-comparison.md  effects-migration-plan.md  effects-sysex-address-map.md  effects-sysex-to-sliders-gap.md  effects.rst  features-and-usage.md  functions.py  getting-started.rst  index.rst  installation.rst  instrument.rst  intro.rst  jdxi_editor.midi.data.analog.rst  (+37 more)
(+3404 files in other folders)
