[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jdxi_manager"
version = "0.30.0"
description = "A MIDI manager and editor for the Roland JD-Xi synthesizer"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Mark Brooks", email = "mark.x.brooks@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]
dependencies = [
    "PySide6>=6.8.1.1",
    "PySide6_Addons>=6.8.1.1",
    "PySide6_Essentials>=6.8.1.1",
    "python-rtmidi>=1.5.8",
    "qtpy",
    "qtawesome",
    "mido",
    "Pillow",
    "decologr",
    "picomidi",
]

[project.optional-dependencies]
soundfont = ["sf2utils>=1.0.0", "sounddevice>=0.4.0"]

[project.urls]
Homepage = "https://github.com/markxbrooks/JDXI-Editor"
Repository = "https://github.com/markxbrooks/JDXI-Manager.git"
Issues = "https://github.com/markxbrooks/JDXI-Editor/issues"

[project.scripts]
jdxi_manager = "jdxi_manager.main:main"

[tool.hatch.build.targets.wheel]
packages = ["jdxi-editor"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 